--- a/css/admin.css
+++ b/css/admin.css
@@ -238,7 +238,7 @@ th {
 
 .circle-wrap .circle .mask.full,
 .circle-wrap .circle .fill {
-    animation: fill ease-in-out 3s;
+    /* animation: fill ease-in-out 3s; */
     transform: rotate(126deg);
 }
 
@@ -251,6 +251,16 @@ th {
         transform: rotate(126deg);
     }
 }
+
+/* @keyframes fill {
+    0% {
+        transform: rotate(var(0deg));
+    }
+
+    100% {
+        transform: rotate(var(--end-rotate));
+    }
+} */
 
 .circle-wrap .inside-circle {
     width: 130px;
