--- a/css/admin.css
+++ b/css/admin.css
@@ -411,6 +411,9 @@ th {
 }
 
 #sup-submit-btn {
+    border: none;
+    font-weight: bold;
+    font-size:16px;
     padding: 15px 30px;
     color: white;
     background-color: green;
