--- a/css/admin.css
+++ b/css/admin.css
@@ -119,7 +119,7 @@ body {
 }
 
 .box p {
-    vertical-align: middle; 
+    vertical-align: middle;
     font-size: 35px;
     color: white;
     font-weight: bold;
@@ -132,12 +132,12 @@ body {
     /*các items sẽ được xếp cùng nhau trên một dòng nhưng vẫn set width, height, margin, padding đủ 4 hướng*/
 }
 
-.box h4{
- margin: 0;
- color: #f1f1f1;
+.box h4 {
+    margin: 0;
+    color: #f1f1f1;
 }
 
-.box .flex{
+.box .flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -236,9 +236,10 @@ th {
     background-color: #f7403b;
 }
 
-:root{
-    --change:0deg;
+:root {
+    --change: 0deg;
 }
+
 .circle-wrap .circle .mask.full,
 .circle-wrap .circle .fill {
     animation: fill ease-in-out 3s;
@@ -361,21 +362,24 @@ button {
     cursor: pointer;
     border-radius: 4px;
     transition: background-color 0.3s ease;
-  }
-  
-  button.delete {
-    background-color: #f44336; /* Red */
+}
+
+button.delete {
+    background-color: #f44336;
+    /* Red */
     color: white;
-  }
-  
-  button.modify {
-    background-color: #4caf50; /* Green */
+}
+
+button.modify {
+    background-color: #4caf50;
+    /* Green */
     color: white;
-  }
-  
-  button:hover {
-    background-color: #555; /* Dark gray */
-  }
+}
+
+button:hover {
+    background-color: #555;
+    /* Dark gray */
+}
 
 #add-btn-supplier {
     font-weight: bold;
@@ -446,7 +450,7 @@ button {
 #sup-submit-btn {
     border: none;
     font-weight: bold;
-    font-size:16px;
+    font-size: 16px;
     padding: 15px 30px;
     color: white;
     background-color: green;
@@ -461,7 +465,7 @@ button {
 #sup-reset-btn {
     border: none;
     font-weight: bold;
-    font-size:16px;
+    font-size: 16px;
     padding: 15px 30px;
     color: white;
     background-color: darkcyan;
@@ -473,19 +477,20 @@ button {
     background-color: cadetblue;
 }
 
-.back-btn{
+.back-btn {
     font-weight: bold;
     margin: 20px;
     float: right;
     padding: 15px;
-    background-color:dodgerblue;
+    background-color: dodgerblue;
     color: white;
     cursor: pointer;
     border-radius: 10px;
     text-decoration: none;
 }
-.back-btn:hover{
-    background-color:deepskyblue;
+
+.back-btn:hover {
+    background-color: deepskyblue;
     scale: 1.1;
 }
 
@@ -515,7 +520,7 @@ button {
     width: 60%;
     box-sizing: border-box;
 }
-  
+
 .right-form-info {
     font-size: 50px;
     width: 40%;
@@ -528,12 +533,17 @@ button {
 input.larger-checkbox {
     width: 20px;
     height: 20px;
-  }
+}
+
+input.larger-input {
+    font-size: 20px;
+    height: 20px;
+}
 
 /* RESPONSIVE */
 
 @media only screen and (max-width:1450px) {
-    #content{
-        width:1450px;
+    #content {
+        width: 1450px;
     }
 }
