--- a/css/admin.css
+++ b/css/admin.css
@@ -428,6 +428,19 @@ button:hover {
     justify-content: space-between;
 }
 
+.info-wrapper {
+    margin-bottom: 25px;
+    display: flex;
+}
+
+.info-wrapper h3{
+    line-height: 0px;
+}
+
+.info-wrapper h3:nth-of-type(2) {
+    margin-left: 20px;
+}
+
 .info-btn-wrapper {
     margin: 50px 0px;
     display: flex;
