--- a/css/admin.css
+++ b/css/admin.css
@@ -119,7 +119,7 @@ body {
 }
 
 .box p {
-    vertical-align: middle; 
+    vertical-align: middle;
     font-size: 35px;
     color: white;
     font-weight: bold;
@@ -132,12 +132,12 @@ body {
     /*các items sẽ được xếp cùng nhau trên một dòng nhưng vẫn set width, height, margin, padding đủ 4 hướng*/
 }
 
-.box h4{
- margin: 0;
- color: #f1f1f1;
+.box h4 {
+    margin: 0;
+    color: #f1f1f1;
 }
 
-.box .flex{
+.box .flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -236,9 +236,10 @@ th {
     background-color: #f7403b;
 }
 
-:root{
-    --change:0deg;
+:root {
+    --change: 0deg;
 }
+
 .circle-wrap .circle .mask.full,
 .circle-wrap .circle .fill {
     animation: fill ease-in-out 3s;
@@ -337,6 +338,49 @@ th {
     color: red;
 }
 
+/* MANAGE BUTTONS */
+.add-product-button {
+    color: white;
+    background-color: #272c4a;
+    height: 100%;
+    cursor: pointer;
+    float: right;
+    border-radius: 7px;
+    margin-right: 10px;
+    font-size: 35px;
+}
+
+.add-product-button ion-icon {
+    display: block;
+    margin: auto;
+    /* Center both horizontally and vertically */
+}
+
+button {
+    padding: 8px 12px;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+button.delete {
+    background-color: #f44336;
+    /* Red */
+    color: white;
+}
+
+button.modify {
+    background-color: #4caf50;
+    /* Green */
+    color: white;
+}
+
+button:hover {
+    background-color: #555;
+    /* Dark gray */
+}
+
 #add-btn-supplier {
     font-weight: bold;
     margin: 20px;
@@ -384,6 +428,19 @@ th {
     justify-content: space-between;
 }
 
+.info-wrapper {
+    margin-bottom: 25px;
+    display: flex;
+}
+
+.info-wrapper h3{
+    line-height: 0px;
+}
+
+.info-wrapper h3:nth-of-type(2) {
+    margin-left: 20px;
+}
+
 .info-btn-wrapper {
     margin: 50px 0px;
     display: flex;
@@ -406,7 +463,7 @@ th {
 #sup-submit-btn {
     border: none;
     font-weight: bold;
-    font-size:16px;
+    font-size: 16px;
     padding: 15px 30px;
     color: white;
     background-color: green;
@@ -421,7 +478,7 @@ th {
 #sup-reset-btn {
     border: none;
     font-weight: bold;
-    font-size:16px;
+    font-size: 16px;
     padding: 15px 30px;
     color: white;
     background-color: darkcyan;
@@ -433,19 +490,20 @@ th {
     background-color: cadetblue;
 }
 
-.back-btn{
+.back-btn {
     font-weight: bold;
     margin: 20px;
     float: right;
     padding: 15px;
-    background-color:dodgerblue;
+    background-color: dodgerblue;
     color: white;
     cursor: pointer;
     border-radius: 10px;
     text-decoration: none;
 }
-.back-btn:hover{
-    background-color:deepskyblue;
+
+.back-btn:hover {
+    background-color: deepskyblue;
     scale: 1.1;
 }
 
@@ -475,7 +533,7 @@ th {
     width: 60%;
     box-sizing: border-box;
 }
-  
+
 .right-form-info {
     font-size: 50px;
     width: 40%;
@@ -485,11 +543,20 @@ th {
     text-align: center;
 }
 
+input.larger-checkbox {
+    width: 20px;
+    height: 20px;
+}
+
+input.larger-input {
+    font-size: 20px;
+    height: 20px;
+}
 
 /* RESPONSIVE */
 
 @media only screen and (max-width:1450px) {
-    #content{
-        width:1450px;
+    #content {
+        width: 1450px;
     }
 }
