--- a/css/admin.css
+++ b/css/admin.css
@@ -207,7 +207,11 @@ table {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    z-index: 1020;
+    z-index: 100;
+}
+
+.align-middle {
+    vertical-align: middle !important;
 }
 
 td,
