--- a/css/admin.css
+++ b/css/admin.css
@@ -397,6 +397,21 @@ button:hover {
     background-color: darkgreen;
     scale: 1.1;
 }
+.add-management-btn {
+    font-weight: bold;
+    margin: 20px;
+    float: right;
+    padding: 15px;
+    background-color: green;
+    color: white;
+    cursor: pointer;
+    border-radius: 10px;
+    text-decoration: none;
+}
+.add-management-btn:hover {
+    background-color: darkgreen;
+    scale: 1.1;
+}
 
 .manage-name-btn {
     font-size: 30px;
